feat(aura): integrate aura test manager into aura report manager