@@ -40,6 +40,8 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+
+import org.neodymium.ai.config.AiConfiguration;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -442,7 +444,7 @@ public final class HtmlIndexReportGenerator
             // 6. Generate and write index.html
             final String htmlContent = generateIndexHtml(sortedEntries);
             final Path indexPath = outputDirectory.resolve(INDEX_HTML_FILE);
-            Files.writeString(indexPath, htmlContent, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
+            Files.write(indexPath, htmlContent.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
 
             LOGGER.info("📑 Test execution index updated: {}", indexPath.toAbsolutePath());
         }
@@ -511,7 +513,7 @@ public final class HtmlIndexReportGenerator
             // 5. Generate and write index.html
             final String htmlContent = generateIndexHtml(sortedEntries);
             final Path indexPath = outputDirectory.resolve(INDEX_HTML_FILE);
-            Files.writeString(indexPath, htmlContent, StandardCharsets.UTF_8, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
+            Files.write(indexPath, htmlContent.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE);
 
             LOGGER.info("📑 Test execution index refreshed: {}", indexPath.toAbsolutePath());
         }
@@ -528,7 +530,7 @@ public final class HtmlIndexReportGenerator
      */
     public static void main(final String[] args)
     {
-        final Path dir = args != null && args.length > 0 ? Path.of(args[0]) : Path.of("target/ai-reports");
+        final Path dir = args != null && args.length > 0 ? Path.of(args[0]) : Path.of(AiConfiguration.getInstance().getDiskReportDirectory());
         new HtmlIndexReportGenerator().refreshIndex(dir);
     }
 
